--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Cormorant&family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&display=swap');
